
Mon, Sep 29, 2020 : Released Refine 1.9.3

- node insertion uses a native implementation of inverse evaluation
- ref adapt --spalding creates an initial viscous mesh via Spalding's Law
- ref distance computes wall distance to support flow solver turbulence model
- ref interp extended to mixed element meshes
- ref examine reports mesh/solb header data (size)
- oversized solb read results inx warning, not error
- git describe versioning uses + to separate sha metadata for module load
- 64bit integer METIS and ParMETIS supported
- ref adapt --implied-complexity [complexity] imply metric from input mesh

Mon, Jun  4, 2020 : Released Refine 1.9.2

- ref interp learned --face
- ref loop learned --usm3d for USM3D mixed-element version
- ref fun3d removed (use FUN3D sampling)
- ref loop learned --partioner and --mesh-extension options
- parallel Dimension 2 metric .sol and .solb reader
- added 2D .grid sequental format export 
- adopts OpenCSM defaults for global EGADS tess params
- native recursive bisection partitioning
- extraction of a mesh subset in a box
- multiscale metric for deforming grids
- initial MeshLink bootstrap and adaptation
- native alternating RCB partition
- uses edge UV directly without face inverse evaluation check
- exports cell centered solb
- 2D adaptation in parallel for no geometry

Mon, Feb 10, 2020 : Released Refine 1.9.1

- modules deploy with rpath to ESP/117
- swap and collapse normal deviation limits more conservative
- ref loop 2D adaptation with 2D l2projection gradient reconstruction
- 2D adaptation in parallel for an EGADS FACEBODY
- interpolate a single faceid of receptor from a donor for tunnel restart
- pliant smooth force linearly increased near zero to prevent short edges
- metric conformity statistics are reported for each face
- refmpifull boostrap surface adaptation is parallel, single part tess/vol fill
- ref bootstrap --auto-tparams EGADS .tParams for improved tess
- configure --with-mpi creates refmpi and refmpifull