@@ -1,4 +1,6 @@
 
+- ref visualize translates solution formats
+
 Mon, Sep 29, 2020 : Released Refine 1.9.3
 
 - node insertion uses a native implementation of inverse evaluation
